syntax = "proto3";

package com.github.aeonlucid.pogoprotos.data;

option java_package = "com.github.aeonlucid.pogoprotos";
option java_outer_classname = "Data";

import "com/github/aeonlucid/pogoprotos/Enums.proto";
import "com/github/aeonlucid/pogoprotos/data/Player.proto";
import "com/github/aeonlucid/pogoprotos/inventory/Item.proto";

message PokedexEntry {
	com.github.aeonlucid.pogoprotos.enums.PokemonId pokemon_id = 1;
	int32 times_encountered = 2;
	int32 times_captured = 3;
	int32 evolution_stone_pieces = 4;
	int32 evolution_stones = 5;
}

message PlayerBadge {
	com.github.aeonlucid.pogoprotos.enums.BadgeType badge_type = 1;
	int32 rank = 2;
	int32 start_value = 3;
	int32 end_value = 4;
	double current_value = 5;
}

message DownloadUrlEntry {
	string asset_id = 1;
	string url = 2;
	int32 size = 3;
	fixed32 checksum = 4;
}

message PlayerData {
	int64 creation_timestamp_ms  = 1;
	string username = 2;
	com.github.aeonlucid.pogoprotos.enums.TeamColor team = 5;
	repeated com.github.aeonlucid.pogoprotos.enums.TutorialState tutorial_state = 7 [packed=true];
	com.github.aeonlucid.pogoprotos.data.player.PlayerAvatar avatar = 8;
	int32 max_pokemon_storage = 9;
	int32 max_item_storage = 10;
	com.github.aeonlucid.pogoprotos.data.player.DailyBonus daily_bonus = 11;
	com.github.aeonlucid.pogoprotos.data.player.EquippedBadge equipped_badge = 12;
	com.github.aeonlucid.pogoprotos.data.player.ContactSettings contact_settings = 13;
	repeated com.github.aeonlucid.pogoprotos.data.player.Currency currencies = 14;
	int32 remaining_codename_claims = 15;
	com.github.aeonlucid.pogoprotos.data.BuddyPokemon buddy_pokemon = 16;
}

message BuddyPokemon {
	fixed64 id = 1;
	double start_km_walked = 2;
	double last_km_awarded = 3;
}

message AssetDigestEntry {
	string asset_id = 1;
	string bundle_name = 2;
	int64 version = 3;
	fixed32 checksum = 4;
	int32 size = 5;
	bytes key = 6;
}

message PokemonData {
	fixed64 id = 1;
	com.github.aeonlucid.pogoprotos.enums.PokemonId pokemon_id = 2;
	int32 cp = 3;
	int32 stamina = 4;
	int32 stamina_max = 5;
	com.github.aeonlucid.pogoprotos.enums.PokemonMove move_1 = 6;
	com.github.aeonlucid.pogoprotos.enums.PokemonMove move_2 = 7;
	string deployed_fort_id = 8;
	string owner_name = 9;
	bool is_egg = 10;
	double egg_km_walked_target = 11;
	double egg_km_walked_start = 12;
	int32 origin = 14;
	float height_m = 15;
	float weight_kg = 16;
	int32 individual_attack = 17;
	int32 individual_defense = 18;
	int32 individual_stamina = 19;
	float cp_multiplier = 20;
	com.github.aeonlucid.pogoprotos.inventory.item.ItemId pokeball = 21;
	uint64 captured_cell_id = 22;
	int32 battles_attacked = 23;
	int32 battles_defended = 24;
	string egg_incubator_id = 25;
	uint64 creation_time_ms = 26;
	int32 num_upgrades = 27;
	float additional_cp_multiplier = 28;
	int32 favorite = 29;
	string nickname = 30;
	int32 from_fort = 31;
	int32 buddy_candy_awarded = 32;
}

